[package]
name = "wslpath2"
version = "0.1.1"
edition = "2021"
authors = ["Pratik Chowdhury <pratikc@live.co.uk>", "Michael Lohr <michael@lohr.dev>"]
description = "Convert Windows to WSL paths and vice-versa"
readme = "README.md"
repository = "https://github.com/michidk/wslpath2"
documentation = "https://docs.rs/wslpath2"
homepage = "https://github.com/michidk/wslpath2"
license = "MIT"
keywords = ["wsl", "windows", "path", "convert"]
categories = ["filesystem", "os::windows-apis", "os::unix-apis"]

[lib]
name = "wslpath2"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
